--- a/.github/workflows/run-project.yml
+++ b/.github/workflows/run-project.yml
@@ -15,8 +15,25 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  run_on_windows:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '6.x'
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          Write-Host "dotnet run blah"
+
+  run_on_ubuntu:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -36,5 +53,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "dotnet run blah"
