--- a/.github/workflows/run-project.yml
+++ b/.github/workflows/run-project.yml
@@ -51,6 +51,6 @@ jobs:
           dotnet-version: '6.x'
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run a multi-line script 
         run: |
-          echo "dotnet run blah"
+          dotnet run --project experiment/hashing 
