--- a/.github/workflows/run-project.yml
+++ b/.github/workflows/run-project.yml
@@ -28,10 +28,9 @@ jobs:
         with:
           dotnet-version: '6.x'
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run the hashing experiment
         run: |
-          Write-Host "dotnet run blah"
+          dotnet run --project experiment/hashing
 
   run_on_ubuntu:
     # The type of runner that the job will run on
@@ -50,7 +49,6 @@ jobs:
         with:
           dotnet-version: '6.x'
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script 
+      - name: Run the hashing experiment
         run: |
           dotnet run --project experiment/hashing 
