--- a/.github/workflows/run-project.yml
+++ b/.github/workflows/run-project.yml
@@ -32,6 +32,14 @@ jobs:
         run: |
           dotnet run --project experiment/hashing
 
+      - uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '5.x'
+
+      - name: Run the hashing experiment
+        run: |
+          dotnet run --project experiment/hashing 
+
   run_on_ubuntu:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -48,6 +56,14 @@ jobs:
       - uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '6.x'
+
+      - name: Run the hashing experiment
+        run: |
+          dotnet run --project experiment/hashing 
+
+      - uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '5.x'
 
       - name: Run the hashing experiment
         run: |
